<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_yj"
    android:orientation="vertical">


    <!-- 导航栏开始 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#d64f4d"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/loginbackimg4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/header_layer"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/scrollView"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <!--约束布局-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />
        <!--输入用户名开始-->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_user_info"
            android:drawablePadding="10dp"
            android:hint="@string/hint_user"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="#ccc"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textWelcome"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#ccc"
            app:layout_constraintBottom_toBottomOf="@+id/et_username" />
        <!--输入用户名结束-->


        <!--输入密码开始-->

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_user_pwd"
            android:drawablePadding="10dp"
            android:hint="请输入密码"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="#ccc"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />


        <View
            android:id="@+id/password_View"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#ccc"
            app:layout_constraintBottom_toBottomOf="@+id/et_pwd" />


        <!--选择身份开始-->
        <RadioGroup
            android:id="@+id/rg_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd">

            <RadioButton
                android:id="@+id/rb_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:layout_marginStart="10dp"
                android:textColor="#524F4F" />

            <RadioButton
                android:id="@+id/rb_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:layout_marginStart="210dp"
                android:layout_marginRight="100dp"
                android:textColor="#524F4F" />
        </RadioGroup>
        <!--选择身份结束-->


        <!--注册开始-->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="#D64F4D"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/rg_role"/>
        <!--注册结束-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
